--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "editor.fontFamily": "'Inconsolota', Consolas, 'Courier New', monospace"
+    "editor.fontFamily": "'FiraCode','Inconsolota', Consolas, 'Courier New', monospace"
 }
